Chore: Fix fonts on safari.

--- a/app/globals.css
+++ b/app/globals.css
@@ -6,7 +6,8 @@
 /* Define custom fonts with @font-face */
 @font-face {
   font-family: 'Gilda Display';
-  src: url('../public/static/fonts/GildaDisplay-Regular.ttf'),
+  src: url('../public/static/fonts/GildaDisplay-Regular.ttf') format('truetype'),
+    url('../public/static/fonts/GildaDisplay-Regular.woff') format('woff'),
     local('Serif') format('truetype');
   font-weight: normal;
   font-style: normal;
@@ -15,7 +16,8 @@
 
 @font-face {
   font-family: 'Barlow';
-  src: url('../public/static/fonts/Barlow-Regular.ttf'),
+  src: url('../public/static/fonts/Barlow-Regular.ttf') format('truetype'),
+    url('../public/static/fonts/Barlow-Regular.woff2') format('woff2'),
     local('Serif') format('truetype');
   font-weight: normal;
   font-style: normal;
@@ -24,7 +26,9 @@
 
 @font-face {
   font-family: 'Condensed';
-  src: url('../public/static/fonts/BarlowCondensed-Regular.ttf'),
+  src: url('../public/static/fonts/BarlowCondensed-Regular.ttf')
+      format('truetype'),
+    url('../public/static/fonts/BarlowCondensed-Regular.woff2') format('woff2'),
     local('Serif') format('truetype');
   font-weight: normal;
   font-style: normal;
